/* Derived terms */ <creep#66431027>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -57,7 +57,7 @@ The noun is derived from the verb.
 ====Derived terms====
 {{der-top}}
 * {{l|en|becreep}}
-* {{l|en|creep someone out}}
+* {{l|en|creep out}}
 * {{l|en|creep up on}}
 * {{l|en|creeper}}
 * {{l|en|creeping crud}}
