--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -24,6 +24,9 @@
 {{Han etym}}
 {{Han compound|叀|心|t2=heart|ls=ic}}.
 
+===Etymology===
+Related to {{och-l|唯|id=1|to be}}. Its usual meaning "kind, compliant" could be semantically extended from "should be" > "to consider / treat as it should / ought to be, as expected" as copulas tend to expand into full verb ({{zh-ref|Schuessler, 2007}}).
+
 ===Pronunciation 1===
 {{zh-pron
 |m=huì
