--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -152,7 +152,7 @@ From {{inh|frm|fro|chose}}, {{m|fro|cose}}.
 From earlier {{m|fro|cose}}, {{m|fro|cosa}}, inherited from {{inh|fro|la|causa}}. Compare {{m|fro|cause}}.
 
 ===Pronunciation===
-* {{IPA|fro|/ˈtʃozə/}}
+* {{IPA|fro|/ˈt͡ʃo.zə/}}
 
 ===Noun===
 {{fro-noun|f}}
