--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -30,6 +30,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 * Albanian: {{t|sq|Jugosllavia}}
 * Arabic: {{t|ar|يُوغُسْلَافِيَا|f|tr=yūḡoslāviyā}}, {{t|ar|يُوجُوسْلَافِيَا|f|tr=yūgoslāviyā}}
 * Armenian: {{t|hy|Հարավսլավիա}}
+* Aromanian: {{t|rup|Iuguslavii|f}}
 * Azerbaijani: {{t|az|Yuqoslaviya}}
 * Basque: {{t+|eu|Jugoslavia}}
 * Belarusian: {{t|be|Югасла́вія|f}}
