--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -27,7 +27,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 ====Translations====
 {{trans-top|id=Q36704|former country in the Balkans}}
 * Afrikaans: {{t|af|Joego-Slawië}}
-* Albanian: {{t|sq|Jugosllavia}}
+* Albanian: {{t|sq|Jugosllavi|f}} {{qualifier|indedinite}}, {{t|sq|Jugosllavia}} {{qualifier|definite}}
 * Arabic: {{t|ar|يُوغُسْلَافِيَا|f|tr=yūḡoslāviyā}}, {{t|ar|يُوجُوسْلَافِيَا|f|tr=yūgoslāviyā}}
 * Armenian: {{t|hy|Հարավսլավիա}}
 * Aromanian: {{t|rup|Iuguslavii|f}}
