--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -45,9 +45,18 @@ From the same {{inh|zh|sit-pro|-}} root as {{och-l|乾|dry}} ({{zh-ref|Schuessle
 ===Definitions===
 {{zh-hanzi}}
 
-# {{lb|zh|literary|or in compounds|of land}} [[dry]]; [[arid]]
-# {{lb|zh|literary|or in compounds}} [[drought]]; [[dry]] [[spell]]; [[aridness]]
-# {{lb|zh|literary|or in compounds}} [[dry]] [[land]]
+# [[drought]]; [[dry]] [[spell]]; [[aridness]]
+#: {{zh-x|防旱|to take precautions against drought}}
+# [[drought]]-[[stricken]]
+#: {{zh-x|莊稼 旱 了|the crops are '''drought-stricken'''}}
+# {{lb|zh|attributive}} [[unrelated]] to [[water]]
+#: {{zh-x|旱煙|tobacco (smoked in a long-stemmed Chinese pipe)}}
+#: {{zh-x|旱傘|parasol}}
+# on [[land]] or not in a [[paddy]] [[field]]
+#: {{zh-x|旱稻|dry rice}}
+#: {{zh-x|旱船|}}
+# [[land]] [[route]]
+#: {{zh-x|起旱|take an overland route}}
 
 ====Synonyms====
 * {{s|drought}}
