--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -29,8 +29,9 @@ From the same {{inh|zh|sit-pro|-}} root as {{och-l|乾|dry}} ({{zh-ref|Schuessle
 {{zh-pron
 |m=hàn
 |c=hon5
-|h=pfs=hôn
+|h=pfs=hôn;gd=hon1
 |j=han3
+|mb=uìng
 |md=âng
 |mn=qz:ǒaⁿ/tw,xm,zz:ōaⁿ/tw,xm,zz:hōaⁿ/hān
 |mn_note=ǒaⁿ/ōaⁿ/hōaⁿ - vernacular; hān - literary
