--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -276,7 +276,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Kazakh: {{tt+|kk|көпір}}
 * Khmer: {{tt+|km|ស្ពាន}}
 * Khvarshi: {{t|khv|тӏеро}}
-* Korean: {{tt+|ko|다리}}, {{qualifier|suffix}} {{tt|ko|...[[교]]}}
+* Korean: {{tt+|ko|다리}}, {{tt|ko|-교(橋)}} {{qualifier|suffix}}
 * Kumyk: {{tt|kum|кёпюр|tr=köpür}}
 * Kurdish:
 *: Central Kurdish: {{tt+|ckb|پرد}}
@@ -292,9 +292,9 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Lingala: {{tt|ln|gwagwa}}, {{tt|ln|gbagba}}
 * Lithuanian: {{tt+|lt|tiltas|m}}
 * Livonian: {{tt|liv|sīlda}}
-{{trans-mid}}
 * Low German:
 *: German Low German: {{tt|nds-de|Brügge|f}}
+{{trans-mid}}
 * Luganda: {{tt|lg|olutindo}}
 * Lun Bawang: {{tt|lnd|afir}}
 * Luxembourgish: {{tt+|lb|Bréck|f}}
@@ -312,7 +312,8 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Mingrelian: {{tt|xmf|ხინჯი}}
 * Mirandese: {{tt|mwl|puonte}}
 * Moksha: {{tt|mdf|седь}}
-* Mongolian: {{tt+|mn|гүүр}}
+* Mongolian:
+*: Cyrillic: {{tt+|mn|гүүр}}
 * Navajo: {{tt|nv|naʼníʼá}}
 * Nepali: {{tt|ne|पुल}}
 * Nogai: {{tt|nog|коьпир}}
