--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -34,7 +34,7 @@
 # {{†}} to [[comfort]]
 
 ===Compounds===
-{{zh-der|偎隨|偎儂|偎妻靠婦|偎乾就濕|依偎|偎依|偎倚|偎留|偎紅倚翠|偎香倚玉|偎風躲箭|偎慵墮懶|偎傍|倚玉偎香|倚翠偎紅|輕偎低傍}}
+{{zh-der|偎隨|偎儂|偎妻靠婦|偎乾就濕|依偎|偎依|偎倚|偎留|偎紅倚翠|偎香倚玉|偎風躲箭|偎慵墮懶|偎傍|倚玉偎香|倚翠偎紅|輕偎低傍|偎抱}}
 
 ----
 
