--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -25,13 +25,14 @@
 |c=gau3
 |c-t=
 |g=
-|h=pfs=kèu
+|h=pfs=kiéu
 |j=
 |mb=
 |md=
-|mn=qz:kió/xm,zz:kó͘/káu
-|mn_note=kió/kó͘ - literary; káu - vernacular
-|mn-t=
+|mn=káu/xm,zz:kó͘/qz:kió
+|mn_note=káu - vernacular; kió/kó͘ - literary
+|mn-t=gao2/gou3
+|mn-t_note=gao2 - vernacular; gou3 - literary
 |w=
 |x=
 |mc=y
