--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -44,9 +44,12 @@
 {{zh-hanzi}}
 
 # [[filth]]; [[dirt]]
+#: {{zh-x|油垢|greasy dirt}}
+#* {{zh-x|不 吹 毛 而 求 小 疵，不 洗 垢 而 察 難 知。||ref=Hanfeizi}}
+# [[filthy]]
 #* {{zh-x|不 生 不 滅 不 '''垢''' 不 淨 不 增 不 減|Nothing is born, nothing destroyed; nothing is '''filth''', nothing is clean; nothing increases, nothing decreases.|CL|ref={{w|Xuanzang}}'s translation of the {{w|Heart Sutra}}, 649}}
-# [[dust]]
-# [[shame]]
+# {{lb|zh|obsolete}} [[dust]]
+# {{lb|zh|literary}} [[shame]]
 #: {{zh-alt-inline|詬}}
 
 ====Synonyms====
