--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -404,7 +404,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 # Of a direction relative to the subject, precisely; as if following a direct line.
 #: ''The door will be '''straight''' ahead of you.''
 #: ''Go '''straight''' back.''
-# Directly; without [[pause]], [[delay]] or [[detour]].
+# {{senseid|en|directly; without pause, delay or detour}} Directly; without [[pause]], [[delay]] or [[detour]].
 #: ''On arriving at work, he went '''straight''' to his office.''
 #* {{RQ:Marlowe Tamburlaine|1|II|ii|url=https://books.google.com/books?id=0HFGOmnsvAMC&pg=PP31|Tartarian theeues,<br>That lie in ambuſh, waiting for a pray:<br>What ſhould we doe but bid them battel '''ſtraight''',<br>And rid the world of thoſe deteſted troopes?}}
 #* {{RQ:Addison Cato|1|1}}
