--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -166,7 +166,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|gede|f}}
 * Kyrgyz: {{t|ky|ашказан}}, {{t+|ky|курсак}}
-* Lao: {{t+|lo|ກະເພາະ}}, {{t|lo|ທ້ອງ}}
+* Lao: {{t+|lo|ກະເພາະ}}, {{t|lo|ທ້ອງ}}, {{t|lo|ກະມະລະ}}
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|alvus|m}}, {{t|la|venter|m}}, {{t|la|stomachus|m}}
 * Latvian: {{t|lv|kuņģis|m}}
@@ -177,8 +177,8 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Lotud: {{t|dtr|tian}}
 * Low German: {{t|nds|Maag|m}}
 * Luganda: {{t-needed|lg}}
-* Luo: {{t|luo|ich}}
 {{trans-mid}}
+* Luo: {{t|luo|ich}}
 * Luxembourgish: {{t|lb|Mo|m}}
 * Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}, {{t|mk|мев|m}}
 * Malay: {{t+|ms|perut}}
