--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -482,7 +482,7 @@ See combined section below.
 * Russian: {{t+|ru|подхва́тывать|impf|sc=Cyrl}}, {{t+|ru|подхвати́ть|pf|sc=Cyrl}}, {{t+|ru|подцепля́ть|impf|sc=Cyrl}}, {{t+|ru|подцепи́ть|pf|sc=Cyrl}}
 * Spanish: {{t+|es|pillar}}, {{t+|es|coger}}, {{t+|es|agarrar}}
 * Thai: {{t-needed|th}}
-* Ukrainian: {{t|uk|заражатися|impf}}, {{t|uk|заразитися|pf}}, {{t|uk|підхо́плювати|impf}}, {{t|uk|підхопи́ти|pf}}
+* Ukrainian: {{t|uk|заража́тися|impf}}, {{t|uk|зарази́тися|pf}}, {{t|uk|підхо́плювати|impf}}, {{t|uk|підхопи́ти|pf}}
 * Vietnamese: {{t+|vi|mắc}}
 {{trans-bottom}}
 
