--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -184,6 +184,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t+|sv|skjuta}}
 * Tajik: {{t|tg|тела додан}}
+* Tamil: {{t+|ta|தள்ளு}}
 * Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}} {{q|tr.}}; {{t|te|శక్తివంతముగా తోయుట|sc=Telu}} {{q|intr.}}
 * Thai: {{t+|th|ดัน}}, {{t+|th|กด}}, {{t+|th|ผลัก}}
 * Turkish: {{t+|tr|itmek}}, {{t+|tr|itelemek}}
