/* Definitions */Dialectal synonyms <既#66498955>

--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -57,6 +57,9 @@ Maybe {{der|zh|sit}} ({{zh-ref|Schuessler, 2007}}). Exopassive (perfective) of {
 # [[both]] . . . ([[and]]...); [[as well as]]
 #: {{zh-x|既 聰明 又 漂亮|smart and pretty}}
 
+====Synonyms====
+{{zh-dial|已經}}
+
 ===Compounds===
 {{zh-der|一如既往|不咎既往|不溯既往|一言既出|既笄|既醉|既是|既然|既成|既判力|既有|既不沙|既望|既定|既遂犯|既夕禮|既死魄|既得權|既生魄|既往不咎|東曦既駕|既而|既成事實|既得利益|食既|蝕既|既來之，則安之}}
 
