--- a/en/旿/旿.16935.wikitext
+++ b/en/旿/旿.16935.wikitext
@@ -9,12 +9,37 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[m5]], [[ng5]]|y=m5, ng5}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=wǔ
+|m-s=
+|dg=
+|c=ng5
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=a
+}}
+
+===Definitions===
+{{head|zh|Han character}}
+
+# {{rfdef|zh}} 
 
 ----
 
@@ -36,12 +61,3 @@
 {{ko-hanja|hangeul=오|eumhun=|rv=o|mr=o|y=o}}
 
 # {{rfdef|ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wǔ]] ([[wu3]])|wg=wu<sup>3</sup>}}
-
-# {{rfdef|cmn|sort=日04}}
