/* Chinese */Add Etymology 2 <旿#66526156>

--- a/en/旿/旿.16935.wikitext
+++ b/en/旿/旿.16935.wikitext
@@ -15,7 +15,9 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=wǔ
 |m-s=
@@ -36,10 +38,13 @@
 |cat=a
 }}
 
-===Definitions===
+====Definitions====
 {{head|zh|Han character}}
 
 # {{rfdef|zh}} 
+
+===Etymology 2===
+{{zh-see|晤}}
 
 ----
 
