--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -494,6 +494,18 @@ From {{der|fr|en|brig}}.
 
 ----
 
+==Portuguese==
+
+===Etymology===
+{{ubor|pt|en|brick}}.
+
+===Noun===
+{{pt-noun|m|s}}
+
+# {{lb|pt|ultimate frisbee}} {{l|en|brick}}
+
+----
+
 ==Scots==
 
 ===Verb===
