--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -68,7 +68,7 @@
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hausa: {{t|ha|Jamhuriyar Cak}}
-* Hebrew: {{t|he|צֶ׳כְיָה|f|tr=chekhia}}, {{t|he|הָרֶפּוּבְּלִיקָה הַצֵ׳כִית|tr=ha-repubelikah ha-cheikia}}
+* Hebrew: {{t|he|צֶ׳כְיָה|f|tr=chékhia}}, {{t|he|הָרֶפּוּבְּלִיקָה הַצֵ׳כִית|tr=harepúbelika hachékhit}}
 * Hindi: {{t+|hi|चेक गणराज्य|m}}, {{t+|hi|चेक}}, {{t|hi|चेक रिपब्लिक}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
