--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -108,7 +108,7 @@ From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||eas
 {{zh-der|反掌之易|和易|器小易盈|坦易|大不易|夷易|始終不易|容易|小器易盈|居大不易|居易|嶢嶢易缺|平心易氣|平易|平易謙沖|平易近人|平易近民|彩雲易散|得來不易|情詞易工|慢易|易刑處分|易加卡|易北河|易卜生|易可|易堂九子|易如反掌|易如拾芥|易如翻掌|易守難攻|易帶|易感性|易手|易拉罐|易於反掌|易易|易熔合金|易燃物|易知由單|易通釋|易開罐|未易才|樂易|深耕易耨|淺易|淺而易見|淺顯易懂|盛筵易散|眾擎易舉|知易行難|知難行易|簡易|簡易師範|脫易|賢賢易色|輕易|輕而易舉|辟易|道近易從|避難就易|鄙易|量小易盈|陰陽易位|險易|難易|難易適中|顯而易見|馮唐易老|驕易|三不易|來之不易|易窯|易與}}
 
 ===Etymology 3===
-{{zh-forms|alt=噲}}
+{{zh-forms|alt=噲,慧}}
 Possibly from {{och-l|慧}} ({{zh-ref|Li Ru-long, 2002}}).
 
 ====Pronunciation====
