--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -41,7 +41,7 @@ From {{inh|en|enm|Germanie}}, from {{inh|en|ang|Germania}}, from {{der|en|la|Ger
 # {{place|en|unincorporated community|co/Houston County|s/Texas|c/USA}}.
 
 ====Usage notes====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The area more often described an ethnic region than a polity into the 16th century, with [[Old English]] {{m|ang|Germanie}} even occasionally being used to refer to the areas of [[England]] held by the [[Saxons]], [[Angles]], [[&c.]]<ref name=oed/> As late as the 19th century, the political area considered "Germany" might include or exclude areas such as [[Austria]], [[Königsberg]], [[Switzerland]], or even non-German parts of the Austrian Empire depending on the speaker and context. During the period of division between 1949 and 1990, either [[West Germany|West]] or [[East Germany]] might be referenced as simply "Germany" depending on context, although English use typically referenced the West. See also the continuing use of {{m|en|Korea}} to refer primarily to [[South Korea]].
+Presently, {{m|en|Germany}} usually refers to [[Federal Republic of Germany]];<ref name=oed/> historical senses other than the [[German Empire]], [[Weimar Germany]], and [[Nazi Germany]] are usually distinguished. Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The area more often described an ethnic region than a polity into the 16th century, with [[Old English]] {{m|ang|Germanie}} even occasionally being used to refer to the areas of [[England]] held by the [[Saxons]], [[Angles]], [[&c.]]<ref name=oed/> As late as the 19th century, the political area considered "Germany" might include or exclude areas such as [[Austria]], [[Königsberg]], [[Switzerland]], or even non-German parts of the Austrian Empire depending on the speaker and context. During the period of division between 1949 and 1990, either [[West Germany|West]] or [[East Germany]] might be referenced as simply "Germany" depending on context, although English use typically referenced the West. See also the continuing use of {{m|en|Korea}} to refer primarily to [[South Korea]].
 
 ====Synonyms====
 * {{sense|present state}} {{l|en|Federal Republic of Germany}} ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
