--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 From {{inh|en|enm|Germanie}}, from {{inh|en|ang|Germania}}, from {{der|en|la|Germānia|t=land of the Germans}}, from {{m|la|Germānī}}, a people living around and east of the [[Rhine]] first attested in the {{nowrap|1st century {{B.C.}}}} works of {{w|Julius Caesar}} and of uncertain etymology. The [[exonym]] was said by {{w|Strabo}} to derive from {{m|la|germānus||close kin; genuine}}, making it cognate with {{m|en|germane}} and {{m|en|german}}, but this seems unsupported. Attempts to derive it from Germanic or Celtic roots since the 18th century<ref>See, for example, the variety of derivations cited at "[http://books.google.com/books?id=zoY_AAAAMAAJ&pg=PT261 Germans]" in the Rev.&nbsp;George William Lemon's ''English Etymology'' (1788).</ref> are all problematic,<ref name=oed>"German, ''adj.'' and ''n''", in: ''Oxford English Dictionary'', {{nowrap|3rd ed.}}. Oxford University Press (Oxford), 2012.</ref> although it is perhaps cognate with the {{cog|sga|gair||neighbour}}.<ref name=codee>"German", in: ''The Concise Oxford Dictionary of English Etymology''. Oxford University Press (Oxford), 1996.</ref> {{doublet|en|Germania}}.
 
+In reference to a medieval kingdom, English ''Germany'' is usually an anachronism using the Roman name to describe the area or [[calque|calquing]] various {{der|en|la|-}} terms like {{m|la|rex}} {{m|la|Teutonicorum}} ("[[king]] of the [[Teutons]]"), which were often derogatory exonyms rather than formal titles.
+{{cln|en|English calques from Latin}}
+
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈd͡ʒɜː.mə.ni/}}
 * {{audio|en|En-uk-Germany.ogg|Audio (UK)}}
