--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -1,6 +1,7 @@
 ==English==
 {{wikipedia|mul=names of Germany}}
-
+[[File:Germanic Languages Map Europe.png|thumb|right|250px|Major dialects of [[German]] and the [[Germanic]] languages across [[Central Europe]], [[Scandinavia]], and the [[British Isles]]]]
+[[File:Deutschland politisch 2010.png|thumb|right|250px|Cities and states of Germany]]
 ===Etymology===
 From {{inh|en|enm|Germanie}}, from {{inh|en|ang|Germania}}, from {{der|en|la|Germānia|t=land of the Germans}}, from {{m|la|Germānī}}, a people living around and east of the [[Rhine]] first attested in the {{nowrap|1st century {{B.C.}}}} works of {{w|Julius Caesar}} and of uncertain etymology. The [[exonym]] was said by {{w|Strabo}} to derive from {{m|la|germānus||close kin; genuine}}, making it cognate with {{m|en|germane}} and {{m|en|german}}, but this seems unsupported. Attempts to derive it from Germanic or Celtic roots since the 18th century<ref>See, for example, the variety of derivations cited at "[http://books.google.com/books?id=zoY_AAAAMAAJ&pg=PT261 Germans]" in the Rev.&nbsp;George William Lemon's ''English Etymology'' (1788).</ref> are all problematic,<ref name=oed>"German, ''adj.'' and ''n''", in: ''Oxford English Dictionary'', {{nowrap|3rd ed.}}. Oxford University Press (Oxford), 2012.</ref> although it is perhaps cognate with the {{cog|sga|gair||neighbour}}.<ref name=codee>"German", in: ''The Concise Oxford Dictionary of English Etymology''. Oxford University Press (Oxford), 1996.</ref> {{doublet|en|Germania}}.
 
@@ -30,7 +31,7 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 ## {{lb|en|historical}} A [[republic]] [[form]]ed in {{w|1918}} with its [[capital]] at [[Berlin]], [[inclusive]] of the [[Nazi]] [[regime]] who [[control]]led it after {{w|1933}}.
 ##* {{quote-book|en|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|isbn=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
 ## {{lb|en|historical|uncommon}} The [[socialist]] [[republic]] [[form]]ed in {{w|1949}} with its [[capital]] at [[Berlin]], [[more]] [[often]] [[known]] in [[English]] as [[East Germany]].
-## {{senseid|en|Q183}} The [[republic]] [[form]]ed in {{w|1949}} with its [[provisional]] [[capital]] [[Bonn]] until {{w|1990}}, [[when]] it [[was]] [[move]]d to [[Berlin]].
+## {{senseid|en|Q183}} The [[republic]] [[form]]ed in {{w|1949}} with its [[provisional]] [[capital]] [[Bonn]] until {{w|1990}}, [[when]] it [[incorporated]] [[East Germany]] and [[moved]] its [[capital]] to [[Berlin]].
 ##* {{quote-journal|en|author=Sam Borden|journal={{w|The New York Times}}|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archiveurl=http://web.archive.org/web/20140713224229/http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archivedate=July 13, 2014|date=July 13, 2014|title=Germans End Long Wait: 24 Years and a Bit Extra|passage=The win made '''Germany''' the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
 ##* {{quote-journal|en|author=Michael Heise|journal={{w|The Wall Street Journal}}|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|archiveurl=http://web.archive.org/web/20150107024431/http://www.wsj.com:80/articles/the-myth-of-the-stupid-german-investor-1411668084|archivedate=January 7, 2015|date=September 25, 2014|title=The Myth of the Stupid German Investor|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
 # {{lb|en|countable|historical}} The [[various]] [[state]]s in [[this]] [[country]] [[either]] over [[time]] or during [[period]]s of [[disunity]] and [[division]], [[sometimes]] {{lb|en|inexact}} [[inclusive]] of the [[Holy Roman Empire]] and [[Austria-Hungary]]'s [[other]] [[holding]]s.
@@ -43,18 +44,26 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 # {{place|en|unincorporated community|co/Clark County|s/Indiana|c/USA}}.
 # {{place|en|unincorporated community|co/Houston County|s/Texas|c/USA}}.
 
+<center><gallery widths="200px" heights="200px">
+Image:Germanic tribes (750BC-1AD).png | Expansion of early Germanic tribes into [[Central Europe]] (Roman "[[Germania]]"), {{w|750 BC|750}}&ndash;{{w|1 BC|1}}{{nbsp}}{{B.C.}}<ref>Herman Kinder, ''Penguin Atlas of World History'', Vol. I, 1988, p. 108.</ref>
+File:Holy Roman Empire 11th century map-en.svg | The [[Holy Roman Empire]] c.{{nbsp}}{{w|1000}}, with the duchies comprising the notional 'Kingdom of the Germans' in green
+File:Deutsches Reich (1871-1918)-en.png | The [[German Empire]] and its [[constituent countries]] in {{w|1914}}
+File:Greater German Reich NS Administration 1944 Variant.png | [[Nazi Germany]] and its notional administrative divisions in {{w|1944}}
+File:Map-Germany-1945.svg | Occupied areas of Germany in 1945: The Soviet territory became [[East Germany]] and the rest [[West Germany]] in {{w|1949}}
+</gallery></center>
+
 ====Usage notes====
 Presently, {{m|en|Germany}} usually refers to [[Federal Republic of Germany]];<ref name=oed/> historical senses other than the [[German Empire]], [[Weimar Germany]], and [[Nazi Germany]] are usually distinguished. Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The area more often described an ethnic region than a polity into the 16th century, with [[Old English]] {{m|ang|Germanie}} even occasionally being used to refer to the areas of [[England]] held by the [[Saxons]], [[Angles]], [[&c.]]<ref name=oed/> As late as the 19th century, the political area considered "Germany" might include or exclude areas such as [[Austria]], [[Königsberg]], [[Switzerland]], or even non-German parts of the Austrian Empire depending on the speaker and context. During the period of division between 1949 and 1990, either [[West Germany|West]] or [[East Germany]] might be referenced as simply "Germany" depending on context, although English use typically referenced the West. See also the continuing use of {{m|en|Korea}} to refer primarily to [[South Korea]].
 
 ====Synonyms====
-* {{sense|present state}} {{l|en|Federal Republic of Germany}} ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
-* {{sense|1949&ndash;1990}} ''See'' {{l|en|West Germany}} and {{l|en|East Germany}}
+* {{sense|all}} {{l|en|Deutschland}}, {{l|en|German Reich}}, {{l|en|Germania}} {{q|uncommon or poetic}}; {{l|en|Dutchland}}, {{l|en|Germanland}} {{q|obs.}}
+* {{sense|present state}} {{l|en|Federal Republic of Germany}} ([[FRG]], [[BRD]]), [[German Republic]]
+* {{sense|1949&ndash;1990}} ''See'' {{l|en|West Germany}} ''and'' {{l|en|East Germany}}
 * {{sense|1933&ndash;1945}} {{l|en|Nazi Germany}}, {{l|en|Third Reich}}
-* {{sense|1919&ndash;1933}} {{l|en|Weimar Republic}}, {{l|en|Weimar}} Germany
-* {{sense|1871&ndash;1918}} {{l|en|German Empire}}, {{l|en|German}} [[Reich]], [[Second Reich]]
-* {{sense|early 19th century, partial}} {{l|en|North German Confederation}}, {{l|en|German Confederation}}, {{l|en|Confederation of the Rhine}}
-* {{sense|earlier}} {{l|en|Holy Roman Empire}}, {{l|en|First Reich}}, {{l|en|East Francia}}, {{l|en|Austrasia}}, {{l|en|Germania}}
-* {{sense|obsolete}} {{l|en|Dutchland}}, {{l|en|Germanland}}
+* {{sense|1919&ndash;1933}} {{l|en|Weimar Republic}}, {{l|en|Weimar Germany}}, {{l|en|German Republic}}
+* {{sense|1871&ndash;1918}} {{l|en|German Empire}}, {{l|en|Second Reich}}
+* {{sense|early 19th century}} {{l|en|North German Confederation}}, {{l|en|German Confederation}}, {{l|en|Confederation of the Rhine}}
+* {{sense|earlier}} {{l|en|Holy Roman Empire}}, {{l|en|First Reich}}, {{l|en|East Francia}}; ''see also'' {{l|en|Austria}}
 
 ====Derived terms====
 {{col4|en
