--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -23,6 +23,8 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 #* {{quote-book|en|year=1776|author=Edward Gibbon|authorlink=Edward Gibbon|title={{w|The History of the Decline and Fall of the Roman Empire}}|volume=I|page=218|url=http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218|passage=Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].}}
 #* {{quote-book|en|editors=Colin MacFarquhar; George Gleig|title=Encyclopædia Britannica: Or, A Dictionary of Arts, Sciences, and Miscellaneous Literature|edition=3rd|publisher=A. Bell and C. MacFarquhar|year=1797|page=396|pageurl=http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396|section=entry for "Mentz"|passage=There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l.]] a-year.}}
 #* {{quote-book|en|year=1872|editor=John Fiske|title=History of English Literature|type=Abridgment|original={{w|Henri van Laun}}'s translation of {{w|Hippolyte Taine}}'s ''Histoire de la littérature anglaise'' (1864)|page=26|passage=While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of Germany.}}
+#* '''1944''', {{w|Ludwig von Mises}}, ''Omnipotent Government'', [https://books.google.fr/books?id=VTN8CgAAQBAJ&pg=PT265 p. 265]:
+#*: There have been in '''Germany''', as in all other nations, eulogists of aggression, war, and conquest. But there have been other Germans too. The greatest are not to be found in the ranks of those glorifying tyranny and German world hegemony. Are {{w|Heinrich von Kleist}}, {{w|Richard Wagner}}, and {{w|Detlev von Liliencron}} more representative of the national character than {{w|Kant}}, {{w|Goethe}}, {{w|Schiller}}, {{w|Mozart}}, and {{w|Beethoven}}? The idea of a nation's character is obviously arbitrary. It is derived from a judgment which omits all unpleasant facts contradicting the preconceived dogma.
 # The [[principal]] [[state]] in [[this]] [[country]], [[including]]
 ## {{lb|en|historical}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing [[part]] of the [[Carolingian]] and [[Holy Roman Empire]]s; {{lb|en|metonymy|now|_|uncommon}} the [[Holy Roman Empire]] [[in its entirety]]; {{lb|en|metonymy|obsolete}} the [[Austrian]] [[Habsburg]] [[empire]] [[in its entirety]].
 ##* {{quote-book|en|year=1759|title=A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I (1759)|url=http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33|page=33|passage=There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.}}
@@ -38,7 +40,7 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 #* {{quote-book|en|year=2007|author=William Clark|title=Academic Charisma and the Origins of the Research University|page=84|isbn=0226109224|passage=The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.}}
 #* {{quote-book|en|year=2010|author=Ilan Stavans|authorlink=Ilan Stavans|title=Gabriel García Márquez: The Early Years|isbn=0312240333|passage=In a Renault 14, they drove from one '''Germany''' to the other.}}
 #* {{quote-web|en|author=Klaus Wiegrefe|authorlink=de:Klaus Wiegrefe|url=http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archiveurl=http://web.archive.org/web/20120627082630/http://www.spiegel.de:80/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archivedate=June 27. 2012|work={{w|Spiegel Online}}|date=September 29, 2010|title=Germany's Unlikely Diplomatic Triumph: An Inside Look at the Reunification Negotiations|passage=It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West '''Germany''' in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change.}}
-# {{lb|en|uncommon}} {{given name|en|male}}
+# {{lb|en|uncommon}} {{given name|en|male}}.
 # {{lb|en|uncommon}} {{surname|en}}
 # {{place|en|township|co/Adams County|s/Pennsylvania|c/USA}}.
 # {{place|en|unincorporated community|co/Clark County|s/Indiana|c/USA}}.
