--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -19,16 +19,16 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 {{en-proper noun|~|Germanies|Germanys}}
 
 # A [[nation]] or [[civilization]] [[occupy]]ing the [[country]] around the [[Rhine]], [[Elbe]], and [[upper]] [[Danube]] [[river|River]]s in [[Central Europe]], [[taken]] as a [[whole]] under its [[various]] [[government]]s.
-#* {{quote-book|en|year=1775|author=Charles Burney|title=The Present State of Music in Germany, the Netherlands, and United Provinces|volume=II|page=3|url=http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3|passage=I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...}}
 #* {{quote-book|en|year=1776|author=Edward Gibbon|authorlink=Edward Gibbon|title={{w|The History of the Decline and Fall of the Roman Empire}}|volume=I|page=218|url=http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218|passage=Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].}}
-#* {{quote-book|en|editors=Colin MacFarquhar; George Gleig|title=Encyclopædia Britannica: Or, A Dictionary of Arts, Sciences, and Miscellaneous Literature|edition=3rd|publisher=A. Bell and C. MacFarquhar|year=1797|page=396|pageurl=http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396|section=entry for "Mentz"|passage=There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l.]] a-year.}}
 #* {{quote-book|en|year=1872|editor=John Fiske|title=History of English Literature|type=Abridgment|original={{w|Henri van Laun}}'s translation of {{w|Hippolyte Taine}}'s ''Histoire de la littérature anglaise'' (1864)|page=26|passage=While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.}}
 #* '''1944''', {{w|Ludwig von Mises}}, ''Omnipotent Government'', [https://books.google.fr/books?id=VTN8CgAAQBAJ&pg=PT265 p. 265]:
 #*: There have been in '''Germany''', as in all other nations, eulogists of aggression, war, and conquest. But there have been other Germans too. The greatest are not to be found in the ranks of those glorifying tyranny and German world hegemony. Are {{w|Heinrich von Kleist}}, {{w|Richard Wagner}}, and {{w|Detlev von Liliencron}} more representative of the national character than {{w|Kant}}, {{w|Goethe}}, {{w|Schiller}}, {{w|Mozart}}, and {{w|Beethoven}}? The idea of a nation's character is obviously arbitrary. It is derived from a judgment which omits all unpleasant facts contradicting the preconceived dogma.
 # The [[principal]] [[state]] in [[this]] [[country]], [[including]]
 ## {{lb|en|historical}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing [[part]] of the [[Carolingian]] and [[Holy Roman Empire]]s; {{lb|en|metonymy|now|_|uncommon}} the [[Holy Roman Empire]] [[in its entirety]]; {{lb|en|metonymy|obsolete}} the [[Austrian]] [[Habsburg]] [[empire]] [[in its entirety]].
 ##* {{quote-book|en|year=1759|title=A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I (1759)|url=http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33|page=33|passage=There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.}}
+##* {{quote-book|en|year=1775|author=Charles Burney|title=The Present State of Music in Germany, the Netherlands, and United Provinces|volume=II|page=3|url=http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3|passage=I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...}}
 ##* {{quote-book|en|year=1790|author=Thomas B. Clarke|title=A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State|page=13|url=http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13|passage=When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ſtate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeſty]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveſtiture]] of their dominions; counts and free cities from the {{w|Aulic council}}. But this [[investiture|inveſtiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeſty]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conſtituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeſty]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.}}
+##* {{quote-book|en|editors=Colin MacFarquhar; George Gleig |title=Encyclopædia Britannica |edition=3rd|publisher=A. Bell & C. MacFarquhar |year=1797 |page=396 |pageurl=http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396 |section="Mentz" |passage=There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l.]] a-year.}}
 ## {{lb|en|historical}} An [[empire]] [[form]]ed by [[Prussia]] in {{w|1871}} with its [[capital]] at [[Berlin]].
 ## {{lb|en|historical}} A [[republic]] [[form]]ed in {{w|1918}} with its [[capital]] at [[Berlin]], [[inclusive]] of the [[Nazi]] [[regime]] who [[control]]led it after {{w|1933}}.
 ##* {{quote-book|en|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|isbn=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
