--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -31,7 +31,7 @@ In reference to a medieval kingdom, English ''Germany'' is usually an anachronis
 ##* {{quote-book|en|editors=Colin MacFarquhar; George Gleig |title=Encyclopædia Britannica |edition=3rd|publisher=A. Bell & C. MacFarquhar |year=1797 |page=396 |pageurl=http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396 |section="Mentz" |passage=There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l.]] a-year.}}
 ## {{lb|en|historical}} An [[empire]] [[form]]ed by [[Prussia]] in {{w|1871}} with its [[capital]] at [[Berlin]].
 ## {{lb|en|historical}} A [[republic]] [[form]]ed in {{w|1918}} with its [[capital]] at [[Berlin]], [[inclusive]] of the [[Nazi]] [[regime]] who [[control]]led it after {{w|1933}}.
-##* {{quote-book|en|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|isbn=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
+##* {{quote-book|en|year=1996|author=Paul Bookbinder|title=Weimar Germany: The Republic of the Reasonable|isbn=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
 ## {{lb|en|historical|uncommon}} The [[socialist]] [[republic]] [[form]]ed in {{w|1949}} with its [[capital]] at [[Berlin]], [[more]] [[often]] [[known]] in [[English]] as [[East Germany]].
 ## {{senseid|en|Q183}} The [[republic]] [[form]]ed in {{w|1949}} with its [[provisional]] [[capital]] [[Bonn]] until {{w|1990}}, [[when]] it [[incorporated]] [[East Germany]] and [[moved]] its [[capital]] to [[Berlin]].
 ##* {{quote-journal|en|author=Sam Borden|journal={{w|The New York Times}}|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archiveurl=http://web.archive.org/web/20140713224229/http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archivedate=July 13, 2014|date=July 13, 2014|title=Germans End Long Wait: 24 Years and a Bit Extra|passage=The win made '''Germany''' the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
