--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -67,6 +67,9 @@ Presently, {{m|en|Germany}} usually refers to [[Federal Republic of Germany]];<r
 * {{sense|early 19th century}} {{l|en|North German Confederation}}, {{l|en|German Confederation}}, {{l|en|Confederation of the Rhine}}
 * {{sense|earlier}} {{l|en|Holy Roman Empire}}, {{l|en|First Reich}}, {{l|en|East Francia}}; ''see also'' {{l|en|Austria}}
 
+====Hypernyms====
+* ''See'' {{l|en|Central Europe}}, {{l|en|European Union}}, {{l|en|Europe}}, {{l|en|Eurasia}}, {{l|en|Afro-Eurasia}}, {{l|en|Earth}}
+
 ====Derived terms====
 {{col4|en
 |[[German]]
