--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -79,6 +79,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Erzya: {{t|myv|оймарь}}
 * Esperanto: {{t+|eo|olivo}}
 * Estonian: {{t|et|oliiv}}
+* Etruscan: {{t|ett|*𐌄𐌋𐌄𐌉𐌅𐌀|cinanimate}}
 * Ewe: {{t-needed|ee}}
 * Faroese: {{t|fo|oljuber|n}}
 * Finnish: {{t+|fi|oliivi}}
