/* Noun */ adding senseid <cut#66554035>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -696,7 +696,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #: {{ux|en|He made a fine '''cut''' with his sword.}}
 # The [[result]] of [[#Verb|cut]]ting.
 #: {{ux|en|a smooth or clear '''cut'''}}
-# An opening resulting from cutting; an [[incision]] or [[wound]].
+# {{senseid|en|opening resulting from cutting}} An opening resulting from cutting; an [[incision]] or [[wound]].
 #: {{ux|en|Look at this '''cut''' on my finger!}}
 # A notch, passage, or channel made by cutting or digging; a furrow; a groove.
 #: {{ux|en|a '''cut''' for a railroad}}
