--- a/en/昊/昊.16946.wikitext
+++ b/en/昊/昊.16946.wikitext
@@ -44,7 +44,7 @@
 # {{surname|zh}}
 
 ====Compounds====
-{{zh-der|昊天|昊穹|昊窯}}
+{{zh-der|昊天|昊穹|昊窯|中昊|大昊|太昊|孔昊|少昊|昊乾|昊天不弔|昊天恩|昊天罔極|昊昊|昊樞|昊空|昊英|昊蒼|晴昊|有昊|泰昊|清昊|炎昊|玄昊|秋昊|穹昊|窮昊|蒼昊|軒昊|青昊|革昊|類昊}}
 
 ----
 
