--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -44,7 +44,8 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 |mn=xm,zz,tw,sx,km,hc,tc,pn:sī/qz,jj,lk,ph:sǐ
 |mn-t=si6
 |w=3zr
-|x=shr5
+|x=shr5/shr4
+|x_note=shr5 - vernacular; shr4 - literary
 |mc=y
 |oc=y
 |ma=y
