--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -21,7 +21,14 @@
 {{Han etym}}
 {{Han simp|曐|f=晶|t=日}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|c2=p|t1=twinkling stars}}.
 
-===Pronunciation===
+===Etymology 1===
+{{zh-ref|Baxter and Sagart (2014)}} reconstructs the {{cog|och|-}} as {{m|und|*s-tsʰˤeŋ}}, which can be analysed as a verbal root {{m|und|*tsʰˤeŋ||bright}} with a prefix {{m|und|*s-}}. This reconstruction accounts for the Min initial ''*tsh-'' and the use of the character to write the word {{och-l|晴|tr=*N-tsʰeŋ}}.
+
+Possibly related to {{och-l|清|clear}} ({{zh-ref|Schuessler, 2007}}; {{zh-ref|Baxter and Sagart, 2014}}), in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ||clear; pure; clean}}.
+
+Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from a parallel {{cog|sit}} root ({{zh-ref|Schuessler, 2007}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
+
+====Pronunciation====
 {{zh-pron
 |m=xīng,er=y
 |m-s=xin1
@@ -48,13 +55,6 @@
 |ca=LL-Q9186-Justinrleung-星.wav
 |cat=n,pn,a
 }}
-
-===Etymology 1===
-{{zh-ref|Baxter and Sagart (2014)}} reconstructs the {{cog|och|-}} as {{m|und|*s-tsʰˤeŋ}}, which can be analysed as a verbal root {{m|und|*tsʰˤeŋ||bright}} with a prefix {{m|und|*s-}}. This reconstruction accounts for the Min initial ''*tsh-'' and the use of the character to write the word {{och-l|晴|tr=*N-tsʰeŋ}}.
-
-Possibly related to {{och-l|清|clear}} ({{zh-ref|Schuessler, 2007}}; {{zh-ref|Baxter and Sagart, 2014}}), in turn from {{inh|zh|sit-pro|*(t)s(j)aŋ||clear; pure; clean}}.
-
-Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from a parallel {{cog|sit}} root ({{zh-ref|Schuessler, 2007}}) or derives from {{cog|sit-pro|*s-kar||star}} (STEDT).
 
 ====Definitions====
 {{zh-hanzi}}
@@ -86,6 +86,16 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 {{CJKV||せい|성|tinh}}
 
 ===Etymology 2===
+
+====Pronunciation====
+{{zh-pron
+|m=Xīng
+|c=sing1
+|ma=Zh-xīng.oga
+|ca=LL-Q9186-Justinrleung-星.wav
+|dial=n
+|cat=pn
+}}
 
 ====Definitions====
 {{zh-hanzi}}
