--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -32,7 +32,7 @@ Note the different forms, corresponds to different forms of [[真]].
 |c=san6
 |c-t=
 |g=
-|h=pfs=sṳ́m
+|h=pfs=sṳ́m;gd=sem3
 |j=
 |mb=
 |md=sêng
