t+uk:[[зловити]] ([[WT:EDIT|Assisted]]) <catch#66581209>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -403,7 +403,7 @@ See combined section below.
 * Tajik: {{t|tg|капидан}}
 * Tamil: {{t+|ta|பிடி}}
 * Turkish: {{t+|tr|kapmak}}
-* Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
+* Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}, {{t|uk|злови́ти|pf}}
 * Venetian: {{t|vec|ciapar}}
 * Vietnamese: {{t+|vi|bắt}}
 * Welsh: {{t+|cy|dal}}
