--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -38,7 +38,7 @@
 * {{zh-l|垇}}
 
 ===Compounds===
-{{zh-der|坳堂|坳塘|塘坳|山坳|楊家坳|松樹坳|白石坳|甘塘坳|山溪坳|馬家坳|上馬坳|茅草坳}}
+{{zh-der|坳堂|坳塘|塘坳|山坳|楊家坳|松樹坳|白石坳|甘塘坳|山溪坳|馬家坳|上馬坳|茅草坳|北坳}}
 
 ===References===
 * {{R:yue:Hanzi}}
