--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -82,7 +82,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Estonian: {{t+|et|mantel}}
 * Faroese: {{t|fo|frakki|m}}
 * Finnish: {{t+|fi|takki}}
-* French: {{t+|fr|manteau|m}}, {{t+|fr|paletot|m}}
+* French: {{t+|fr|manteau|m}}, {{t+|fr|paletot|m}}, {{t+|fr|pardessus|m}}
 * Georgian: {{t|ka|პალტო|sc=Geor}}, {{t|ka|ქურქი|sc=Geor}}, {{t|ka|პიჯაკი|sc=Geor}}, {{t|ka|ქურთუკი|sc=Geor}}
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n|sc=Grek}}, {{t+|el|παλτό|n|sc=Grek}}
@@ -97,9 +97,10 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
 * Kazakh: {{t|kk|пальто}}
 * Khmer: {{t|km|អាវធំ}}
-{{trans-mid}}
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
+* Lao: {{t|lo|ເສຶ້ອໃຫຍ່}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
