--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -75,7 +75,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Chinese:
 *: Mandarin: {{t+|cmn|外衣|tr=wàiyī}}, {{t+|cmn|大衣|tr=dàyī}}, {{t+|cmn|外套|tr=wàitào}}
 * Cornish: {{t|kw|kota|m}}, {{t|kw|mantel|f}}
-* Czech: {{t+|cs|kabát|m}}
+* Czech: {{t+|cs|kabát|m}}, {{t+|cs|plášť|m}}
 * Danish: {{t|da|frakke|c}}
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
 * Esperanto: {{t+|eo|jako}}, {{qualifier|portata eksterdome, vintre aŭ ĝenerale en malvarma vetero}} {{t|eo|palto}}
@@ -100,8 +100,8 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투(外套)}}
 * Kyrgyz: {{t|ky|пальто}}
 * Lao: {{t|lo|ເສຶ້ອໃຫຍ່}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
+{{trans-mid}}
 * Latin: {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
@@ -117,6 +117,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Norman: {{t|nrf|câsaque|f}}
 * Norwegian:
 *: Bokmål: {{t+|nb|frakk|m}}
+*: Nynorsk: {{t|nn|frakk|m}}
 * Persian: {{t+|fa|پالتو|tr=pâlto}}, {{t+|fa|کت|tr=kot}}
 * Plautdietsch: {{t|pdt|Waums|n}}, {{t|pdt|Jak|f}}
 * Polish: {{t+|pl|płaszcz|m}}
