--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -73,6 +73,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Cherokee: {{t|chr|ᎦᏌᎴᎾ}}
 * Chichewa: {{t|ny|khothi}}
 * Chinese:
+*: Cantonese: {{t|yue|褸}}, {{t|yue|褛|tr=lau1}}
 *: Mandarin: {{t+|cmn|外衣|tr=wàiyī}}, {{t+|cmn|大衣|tr=dàyī}}, {{t+|cmn|外套|tr=wàitào}}
 * Cornish: {{t|kw|kota|m}}, {{t|kw|mantel|f}}
 * Czech: {{t+|cs|kabát|m}}, {{t+|cs|plášť|m}}
@@ -100,8 +101,8 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투(外套)}}
 * Kyrgyz: {{t|ky|пальто}}
 * Lao: {{t|lo|ເສຶ້ອໃຫຍ່}}
-* Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 {{trans-mid}}
+* Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
