--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -18,7 +18,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 #* {{RQ:Milton Collected Works|Animadversions|139|a more tenacious '''cling''' to worldly reſpects,}}
 
 ====Verb====
-{{en-verb|clings|clinging|clung|past2=clinged|past2_qual=nonstandard}}
+{{en-verb|clings|clinging|clung|past2=clinged|past2_qual=nonstandard|past3=clong|past3_qual=obsolete}}
 
 # {{senseid|en|hold tightly}}To [[hold]] very [[tight]]ly, as to not fall off.
 #: {{ux|en|Seaweed '''clung''' to the anchor.}}
