--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -21,23 +21,22 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 {{en-verb|clings|clinging|clung|past2=clinged|past2_qual=nonstandard|past3=clong|past3_qual=obsolete}}
 
 # {{senseid|en|hold tightly}}To [[hold]] very [[tight]]ly, as to not fall off.
+#: {{syn|en|clinch|grip|Thesaurus:grasp}}
 #: {{ux|en|Seaweed '''clung''' to the anchor.}}
 #* '''2017,''' {{w|Jennifer S. Holland}}, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
 #*: Cartoonish, wide-eyed infants '''cling''' to their mothers or play together low to the ground.
 #* {{quote-book|en|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo| https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055|| And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
 # To [[adhere]] to an object, without being [[affix]]ed, in such a way as to follow its [[contour]]s. Used especially of [[fabric]]s and [[film]]s.
+#: {{syn|en|cleave|stick|Thesaurus:adhere}}
 # {{lb|en|transitive}} To cause to adhere to, especially by [[twining]] round or [[embracing]].
+#: {{syn|en|cleave|stick|Thesaurus:adhere}}
 #* {{RQ:Swift An Examination of Certain Abuses in the City of Dublin}}
 #*: I{{...}} '''clung''' my legs as close to his sides as I could.
 # {{lb|en|transitive}} To cause to [[dry up]] or [[wither]].
 #* {{RQ:Shakespeare Macbeth|V|v|text=If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.}}
 # {{lb|en|intransitive}} To [[dry up]] or [[wither]].
 #: {{ux|en|Wood '''clings'''.}}
-# {{lb|en|figurative|with preposition to}} to [[be fond of]], to [[feel]] strongly about and [[dependent]] on
-
-=====Synonyms=====
-* {{sense|hold tightly}} {{l|en|clinch}}, {{l|en|grip}}; see also [[Thesaurus:grasp]]
-* {{sense|adhere}} {{l|en|cleave}}, {{l|en|stick}}; see also [[Thesaurus:adhere]]
+# {{lb|en|figurative|with preposition ''to''}} To [[be fond of]], to [[feel]] strongly about and [[dependent]] on.
 
 =====Derived terms=====
 * {{l|en|clingy}}
