t+bg:[[повърнато]] t+bg:[[бълвоч]] t+bg:[[повръщане]] ([[WT:EDIT|Assisted]]) <vomit#66590665>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -188,6 +188,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Armenian: {{t+|hy|փսխունք}}
 * Assamese: {{t|as|বমি}}
 * Asturian: {{t|ast|vómitu|m}}
+* Bulgarian: {{t+|bg|повърнато|n}}, {{t+|bg|бълвоч|m}}
 * Catalan: {{t+|ca|vòmit|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|嘔吐物}}, {{t+|cmn|呕吐物|tr=ǒutùwù}}
@@ -249,6 +250,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 
 {{trans-top|act of vomiting}}
 * Arabic: {{t|ar|تَقَيُّؤ|m}}
+* Bulgarian: {{t|bg|повръщане|n}}
 * Galician: {{t|gl|vómito|m}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
 * Greek:
