t+pl:[[skaleczenie]] t+pl:[[rozcięcie]] ([[WT:EDIT|Assisted]]) <cut#66597237>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -826,6 +826,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|برین}}
 * Maori: {{t|mi|motunga}}
+* Polish: {{t+|pl|skaleczenie|n}}, {{t|pl|rozcięcie|n}}
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t+|ro|tăietură|f}}, {{t+|ro|incizie|f}}
 * Russian: {{t+|ru|поре́з|m}} {{q|wound}}, {{t+|ru|разре́з|m}}
