--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -498,6 +498,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Finnish: {{t|fi|[[jakaa]] ([[kahtia]])}}
 {{trans-mid}}
 * German: {{t+|de|schneiden}}, {{t+|de|trennen}}
+* Polish: {{t+|pl|rozciąć}}
 * Portuguese: {{t+|pt|atravessar}}
 * Spanish: {{t+|es|atravesar}}
 {{trans-bottom}}
