--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -145,6 +145,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ма̀слина|f}}
 *: Roman: {{t+|sh|màslina|f}}
+* Sindhi: {{t|sd|زيتون}}
 * Sicilian: {{t+|scn|aliva|f}}, {{t+|scn|uliva|f}}
 * Sinhalese: {{t|si|ඔලිව්}}
 * Slovak: {{t+|sk|oliva|f}}
