t+gl:[[turrar]] ([[WT:EDIT|Assisted]]) <pull#66640140>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -280,6 +280,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Esperanto: {{t+|eo|tiri}}
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|tirer}}
+* Galician: {{t+|gl|turrar}}
 * German: {{t+|de|ziehen}}
 {{trans-mid}}
 * Italian: {{t+|it|tirare}}
