--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -134,7 +134,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Ashokan Prakrit: {{t|inc-ash|*𑀩𑁄𑀮𑁆𑀮𑁆 |tr=*boll}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}, {{t|as|বোল|tr=bül}}
-* Assyrian Neo-Aramaic: {{t|aii|ܗܲܡܙܸܡ|tr=hamzim}}
+* Assyrian Neo-Aramaic: {{t|aii|ܗܲܡܙܸܡ|tr=hāmzim}}, {{m|aii|ܡܲܠܸܠ|tr=mālil}}, {{m|aii|ܡܨܵܘܹܬ݂|tr=mṣaweṯ}}
 * Asturian: {{t+|ast|falar}}
 * Avar: {{t|av|кӏалъазе}}
 * Azerbaijani: {{t+|az|danışmaq}}
@@ -340,6 +340,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 {{trans-bottom}}
 
 {{trans-top|to have a conversation}}
+* Assyrian Neo-Aramaic: {{t|aii|ܣܵܘܹܕ|tr=sawed}}
 * Bashkir: {{t|ba|һөйләшеү}}
 * Bulgarian: {{t+|bg|разговарям}}
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|keskustella}}, {{t+|fi|jutella}}
@@ -373,6 +374,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 {{trans-top|to be able to communicate in a language}}
 * Arabic: {{t+|ar|تَكَلَّمَ}}
 *: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
+* Assyrian Neo-Aramaic: {{t|aii|ܗܲܡܙܸܡ|tr=hāmzim}}, {{m|aii|ܡܲܠܸܠ|tr=mālil}}
 * Bashkir: {{t|ba|һөйләшеү}}, {{t|ba|[[һөйләшә]] [[белеү]]}}
 * Bulgarian: {{t+|bg|говоря}}
 * Catalan: {{t+|ca|parlar}}
