/* Verb */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <felt#66667116>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -482,7 +482,7 @@ From {{inh|ang|gmw-pro|*felt}}.
 From {{inh|yol|enm|fillen}}, from {{inh|yol|ang|fyllan}}, from {{inh|yol|gmw-pro|*fullijan}}.
 
 ===Verb===
-{{head|yol|verb}}
+{{head|yol|verb|past participle|ee-felt}}
  
 # [[filled]]
 
