/* Antonyms */ ders <catch#66668721>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -329,6 +329,49 @@ See combined section below.
 ====Antonyms====
 * {{l|en|drop}}, {{l|en|release}}
 
+====Derived terms====
+{{derived terms |lang=en
+|catchable
+|catch a cold
+|catch air
+|catch-all
+|catch and kill
+|catch and release
+|catch-as-catch-can
+|catchee
+|catcher
+|catch flies
+|catch heat
+|catch hell
+|catch it in the neck
+|catch me
+|catchment
+|catch no ball
+|catch on
+|catch one's breath
+|catch one's death
+|catch one's drift
+|catch one's eyes
+|catch on fire
+|catch out
+|catchphrase
+|catch redhanded
+|catch sight of
+|catch someone napping
+|catch someone's fancy
+|catch some rays
+|catch some z's
+|catch the light
+|catch up
+|catch-up effect
+|catch wind of
+|catch with one's hand in the cookie jar
+|catchword
+|catch you on the flip side
+|dog that caught the car
+|throw a sprat to catch a mackerel
+}}
+
 ====Translations====
 {{trans-top|to capture or snare}}
 * Aklanon: {{t|akl|dakop}}
