/* Translations */ <United Kingdom#66673669>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -81,7 +81,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Kalmyk: {{t|xal|Ниицәтә Нутг}}
 * Kazakh: {{t|kk|Біріккен Корольдік|alt=Бірікке́н Коро́льдік}}, {{t|kk|Құрама Патшалық|alt=Құрама́ Патшалы́қ}} {{q|rare}}, {{t|kk|Ұлыбритания және Солтүстік Ирландия Біріккен Корольдігі}}, {{t|kk|Біріккен Патшалық}}
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស|tr=Châkrâphôp Ángklés}}, {{t|km|សហរាជាណាចក្រ|tr=Sâhâréachéanachâkr}}, {{t+|km|រាជាណាចក្ររួម|tr=Réachéanachakr Ruŏm}}
-* Korean: {{t+|ko|영국(英國)}}, {{t+|ko|그레이트브리튼 북아일랜드 연합왕국(그레이트브리튼 北아일랜드 聯合王國)}}, {{t+|ko|연합왕국(聯合王國)}}
+* Korean: {{t+|ko|영국(英國)}}, {{t|ko|그레이트브리튼 북아일랜드 연합 왕국(그레이트브리튼 北아일랜드 聯合 王國)}}, {{t|ko|연합 왕국(聯合 王國)}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|شانشینی یەکگرتوو|tr=şanşînî yekgrtû}}
 *: Northern Kurdish: {{t+|kmr|Keyaniya Yekbûyî}}
