t+es:[[color ciruela]] t+es:[[ciruela]] t+eo:[[prunkoloro]] ([[WT:EDIT|Assisted]]) <plum#66698156>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -418,6 +418,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Catalan: {{t|ca|color pruna}}
 * Danish: {{t+|da|blomme}}farve
 * Dutch: {{t+|nl|donkerrood|n}}
+* Esperanto: {{t|eo|prunkoloro}}
 * Finnish: {{t|fi|luumunpunainen}}
 * Greek: {{t+|el|δαμασκηνί|n}}
 * Icelandic: {{t|is|plómublár|f}}
@@ -425,6 +426,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Ido: {{t|io|pruneo}}, {{t|io|prunekoloro}}
 * Irish: {{t|ga|plumachorcra}}
 * Japanese: {{t|ja|暗紫色|tr=あんししょく, anshishoku}}
+* Spanish: {{t|es|color ciruela}}, {{t+|es|ciruela}}
 * Swahili: {{t+|sw|zambarau}}
 * Vietnamese: {{t|vi|màu mận}}
 {{trans-bottom}}
