--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -121,7 +121,9 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} afte
 ===Kanji===
 {{ja-kanji|grade=c|rs=日05}}
 
-# justice, right
+# [[this]]
+# [[right]], [[correct]], [[just]]
+# {{non-gloss|indicates agreement or affirmation}}
 
 ====Readings====
 {{ja-readings
