t+cy:[[cyfogi]] t+cy:[[taflu i fyny]] ([[WT:EDIT|Assisted]]) <vomit#67012685>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -163,7 +163,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}, {{t+|vi|ói}}
 * Volapük: {{t+|vo|vomitön}}, {{t|vo|lusputön}} {{qualifier|older term, obsolete}}
 * Walloon: {{t+|wa|rivômi}}, {{t|wa|vômi}}, {{t+|wa|rinåder}} {{q|unpolite}}
-* Welsh: {{t+|cy|chwydu}}
+* Welsh: {{t+|cy|chwydu}}, {{t+|cy|cyfogi}}, {{t|cy|taflu i fyny}}
 * Yiddish: {{t|yi|ברעכן}}, {{t|yi|אויסברעכן}}, {{t|yi|צוריקגעבן}}
 * Yámana: {{t|yag|tamaia}}
 * Zazaki: {{t+|zza|vırecen}}
