t+acw:[[بخارة]] ([[WT:EDIT|Assisted]]) <plum#67015245>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -225,7 +225,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Albanian: {{t+|sq|kumbull|f}}
 * Arabic: {{t|ar|بَرْقُوق|m}}
 *: Egyptian Arabic: {{t|arz|برقوق|m|tr=barʾūʾ}} {{qualifier|collective}}, {{t|arz|برقوقة|f|tr=barʾūʾa}} {{qualifier|singulative}}
-*: Hijazi Arabic: {{t|acw|بخارى|f|tr=buḵāra}}
+*: Hijazi Arabic: {{t|acw|بخارى|f|tr=buḵāra}}, {{t|acw|بخارة|f|tr=buḵāra}}
 *: Moroccan Arabic:  {{t|ary|برقوق|tr=barqūq}} {{qualifier|collective}}, {{t|ary|برقوقة|f|tr=barqūqa}} {{qualifier|singulative}}
 *: South Levantine Arabic: {{t|ajp|خوخ|m|tr=xox}}
 * Aragonese: {{t|an|zirgüello}}
