--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -178,7 +178,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
-{{topics|en|Fabrics}}
+{{topics|en|Fabrics|Headwear}}
 
 ----
 
