--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -68,9 +68,10 @@ Maybe {{der|zh|sit}} ({{zh-ref|Schuessler, 2007}}). Exopassive (perfective) of {
 ----
 
 ==Japanese==
+{{ja-kanji forms|&#64066;|c=y}}
 
 ===Kanji===
-{{ja-kanji|grade=c|rs=无05}}
+{{ja-kanji|grade=c|rs=无05|kyu=&#64066;}}
 
 # [[previously]]
 # [[already]]
