t+acw:[[زيتون]] ([[WT:EDIT|Assisted]]) <olive#67046011>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -46,6 +46,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Albanian: {{t+|sq|ulli|m}}
 * Amharic: {{t|am|ወይራ}}
 * Arabic: {{t|ar|زَيْتُون|m}}
+*: Hijazi Arabic: {{t|acw|زَيْتون|m|tr=zaytūn}}
 *: Moroccan Arabic: {{t|ary|زيتون|tr=zaytūn, zītūn}}
 * Aragonese: {{t+|an|oliva|f}}
 * Aramaic:
