--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -34,8 +34,9 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[lazy]]
+# [[lazy]]; [[indolent]]
 #* {{zh-x|教 不 嚴，師 之 惰。|To teach, without severity, is the teacher's '''laziness'''.|ref=Sanzijing}}
+# {{lb|zh|obsolete}} [[irreverent]]; [[careless]]
 
 ====Synonyms====
 {{zh-dial|懶惰}}
