t+uk:[[зеніт]] ([[WT:EDIT|Assisted]]) <zenith#67059514>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -95,6 +95,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * Spanish: {{t+|es|cenit|m}}
 * Tagalog: {{t|tl|ituktok}}
 * Turkish: {{t+|tr|zenit}}, {{t+|tr|başucu}}, {{t+|tr|başucu noktası}}, {{t|tr|setürreis}}, {{t+|tr|tepe}}
+* Ukrainian: {{t+|uk|зені́т|m}}
 * Vietnamese: {{t+|vi|thiên đỉnh}}
 {{trans-bottom}}
 
@@ -156,6 +157,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * Spanish: {{t+|es|apogeo|m}}, {{t+|es|cenit|m}}
 * Telugu: {{t+|te|స్వర్గము}}
 * Turkish: {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}, {{t+|tr|ayyuk}}
+* Ukrainian: {{t+|uk|зені́т|m}}
 * Vietnamese: {{t+|vi|cực điểm}}, {{t|vi|điểm cao nhất}}, {{t+|vi|tột đỉnh}}
 {{trans-bottom}}
 
