--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -63,6 +63,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * Albanian: {{t|sq|Zelanda e Re}}
 * Amharic: {{t|am|ኒው ዚላንድ|sc=Ethi}}
 * Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f}}
+*: Hijazi Arabic: {{t|acw|نيوزيلندا|f|tr=nyūzīlanda}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
 * Assamese: {{t|as|নিউজিলেণ্ড}}
 * Assyrian Neo-Aramaic: {{t|aii|ܙܝܼܠܵܢܕܵܐ ܚܲܕܬܵܐ|f|tr=zīlanda ḳadta}}
