/* Swedish */ {{topics|sv|Personality}} <butter#67117806>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -561,6 +561,8 @@ From {{m|fr|butte}}.
 ===Anagrams===
 * {{anagrams|sv|a=berttu|brutet|buttre}}
 
+{{topics|sv|Personality}}
+
 ----
 
 ==West Flemish==
