--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,7 +5,7 @@
 * {{alter|en|blonde||feminine}}
 
 ===Etymology===
-Borrowed from {{bor|en|frm|blond|g=m}}, from {{der|en|fro|blond|blond, blont}}, {{der|en|ML.|blondus}}, from {{der|en|frk|*blund|t=a mixed color between golden and light-brown}}, from {{der|en|gem-pro|*blundaz|t=mixed, blinding}}, from {{der|en|ine-pro|*bʰlendʰ-|t=to become turbid, see badly, go blind}}. Compare {{cog|ang|blondenfeax|''blonden''feax|t=grey-haired}}, {{cog|ang|blandan|t=to mix}}. More at {{m|en|blend}}.
+Borrowed from {{bor|en|frm|blond|g=m}}, from {{der|en|fro|blond}}, {{m|fro|blont}}, {{m|fro|blund}}, (> {{m+|ML.|blondus}}), from {{der|en|frk|*blund|t=a mixed color between golden and light-brown}}, from {{der|en|gem-pro|*blundaz|t=mixed, blinding}}, from {{der|en|ine-pro|*bʰlendʰ-|t=to become turbid, see badly, go blind}}. Compare {{cog|ang|blondenfeax|t=grey-haired}}, {{cog|ang|blandan|t=to mix}}. More at {{m|en|blend}}.
 
 Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t=blond}}, from {{der|en|ine-pro|*bʰl̥ndʰ-}}, {{m|ine-pro|*bʰlendʰ-|t=blond, red-haired}}. If so, then it would be cognate with {{cog|sa|ब्रध्न|tr=bradhná|t=ruddy, pale red, yellowish}}.
 
