--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1023,7 +1023,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
 [[Category:English verb forms using redundant wikisyntax]]
-[[Category:en:Meats]]
+{{C|en|Injuries|Meats}}
 
 ----
 
