--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -184,6 +184,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Sundanese: {{t|su|sorong}}
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t+|sv|skjuta}}
+* Tagalog: {{t|tl|itulak}}
 * Tajik: {{t|tg|тела додан}}
 * Tamil: {{t+|ta|தள்ளு}}
 * Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}} {{q|tr.}}; {{t|te|శక్తివంతముగా తోయుట|sc=Telu}} {{q|intr.}}
