/* Compounds */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <明#67151469>

--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -346,8 +346,9 @@ Nominalization of the stem of adjective {{m|ja|明らか|tr=akiraka||[[clear]], 
 
 ====Compounds====
 {{der3|vi
-|{{vi-l|高明|cao minh}}
+|{{vi-l|分明|phân minh}}
 |{{vi-l|明白|minh bạch}}
+|{{vi-l|高明|cao minh}}
 }}
 
 ===References===
