/* Translations */ <United Kingdom#67151856>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -147,7 +147,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Turkish: {{t+|tr|Birleşik Krallık}}
 * Turkmen: {{t|tk|Birleşen Patyşalyk}}
 * Ukrainian: {{t|uk|Сполу́чене Королі́вство|n}}
-* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat muttahidā}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnāiṭeḍ kiṅgḍam}}
+* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat-i muttahidā}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnāiṭeḍ kiṅgḍam}}
 * Uyghur: {{t|ug|بۈيۈك برىتانىيە ۋە شىمالىي ئىرلاندىيە بىرلەشمە پادىشاھلىقى}}
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
 * Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}} ({{t|vi|英國}})
