--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -55,6 +55,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 *: Moroccan Arabic: {{t|ary|خامية|f|tr=ḵāmiyya}}
 * Armenian: {{t+|hy|վարագույր}}
 * Asturian: {{t|ast|cortina|f}}
+* Assyrian Neo-Aramaic: {{t|aii|ܦܲܪܕܵܐ|tr=pārda|m}}, {{t|aii|ܦܸܪܣܵܐ|tr=pirsa|m}}
 * Azerbaijani: {{t+|az|pərdə}}
 * Bashkir: {{t|ba|пәрҙә|sc=Cyrl}}
 * Basque: {{t|eu|errezel}}, {{t+|eu|gortina}}
@@ -162,6 +163,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 
 {{trans-top|piece of cloth in a theater}}
 * Armenian: {{t+|hy|վարագույր}}
+* Assyrian Neo-Aramaic: {{t|aii|ܦܲܪܕܵܐ|tr=pārda|m}}, {{t|aii|ܦܸܪܣܵܐ|tr=pirsa|m}}
 * Azerbaijani: {{t+|az|pərdə}}
 * Bashkir: {{t|ba|шаршау|sc=Cyrl}}
 * Basque: {{t|eu|antzoki-oihal}}
