--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -35,7 +35,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 * This is a [[catenative]] verb that takes the ''to infinitive''. See [[Appendix:English catenative verbs]]
 
 =====Conjugation=====
-{{en-conj-simple|past=chose|past_ptc=chosen|stem=choos}}
+{{en-conj-simple|past=chose|past_ptc=chosen|past2=choosed|past2_qual=nonstandard|past_ptc2=choosed|past_ptc2_qual=nonstandard|past_ptc3=chose|past_ptc3_qual=now colloquial|stem=choos}}
 
 =====Related terms=====
 * {{l|en|choice}}
