--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -299,7 +299,7 @@ From {{inh|en|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{m|enm|chosen
 
 # {{lb|en|dialectal|or|obsolete}} The act of [[choosing]]; [[selection]].
 # {{lb|en|dialectal|or|obsolete}} The power, right, or privilege of choosing; [[election]].
-# {{lb|en|dialectal|or|obsolete}} [[scope|Scope]] for [[choice]].
+# {{rfv-sense|en}} {{lb|en|dialectal|or|obsolete}} [[scope|Scope]] for [[choice]].
 
 ===References===
 * {{R:Century 1911}}
