replace {{en-conj}} with {{en-conj-simple}} using [[Project:AWB|AWB]] <come#67168807>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -115,7 +115,8 @@ The collocations {{m|en|come with}} and {{m|en|come along}} mean {{m|en|accompan
 
 The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling {{m|en|cum}} for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
 
-In older forms of English, when the pronoun ''[[thou]]'' was in active use, and verbs used ''[[-est]]'' for distinct second-person singular indicative forms, the verb ''come'' had the form ''[[comest]]'', and had ''[[camest]]'' for its past tense. Similarly, when the ending ''[[-eth]]'' was in active use for third-person singular present indicative forms, the form ''[[cometh]]'' was used.
+=====Conjugation=====
+{{en-conj-simple|stem=com|past=came|past_ptc=come|past2=come|past2_qual=now nonstandard|past_ptc2=comen|past_ptc2_qual=rare}}
 
 =====Antonyms=====
 * {{l|en|leave}}, {{l|en|go}}, {{l|en|depart}}, {{l|en|exit}}, {{l|en|withdraw}}, {{l|en|retreat}}, {{l|en|flee}}
@@ -178,9 +179,6 @@ In older forms of English, when the pronoun ''[[thou]]'' was in active use, and 
 * [[c'mere]]
 * [[c'min]]
 * [[c'mon]]
-
-=====Conjugation=====
-{{en-conj|come|came|come|coming}}
 
 =====Translations=====
 {{multitrans|data=
