--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -25,7 +25,9 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 # {{senseid|en|tree}} The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]].
 # Any of the parts of something that [[divide]]s like the branch of a tree.
 #: {{ux|en|the '''branch''' of an antler, a chandelier, or a railway}}
-# {{lb|en|chiefly|Southern US}} A [[creek]] or [[stream]] which flows into a larger river. {{qualifier|compare Ohio, Pennsylvania and West Virginia ''[[run]]'', and New York and New England ''[[brook]]''.}}
+# {{lb|en|chiefly|Southern US}} A [[creek]] or [[stream]] which flows into a larger river.
+#: {{cot|en|run|q1=Ohio, Pennsylvania and West Virginia|brook|q2=New York, New England}}
+#: {{co|en|[[branch water|'''branch''' water]]}}
 # {{lb|en|geometry}} One of the portions of a [[curve]] that extends outwards to an indefinitely great distance.
 #: {{ux|en|the '''branches''' of a hyperbola}}
 # A [[location]] of an [[organization]] with several locations.
