t+el:[[πολεμάω]] ([[WT:EDIT|Assisted]]) <fight#67200884>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -113,7 +113,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 * Georgian: {{t|ka|ბრძოლა}}, {{t|ka|შებრძოლება}}, {{t|ka|ჩხუბი}}
 * German: {{t+|de|kämpfen}}, {{t+|de|fechten}}, {{t+|de|streiten}} {{qualifier|archaic}}
 * Gothic: {{t|got|𐍅𐌴𐌹𐌷𐌰𐌽}}
-* Greek: {{t+|el|παλεύω}}, {{t+|el|μάχομαι}}
+* Greek: {{t+|el|παλεύω}}, {{t+|el|μάχομαι}}, {{t+|el|πολεμάω}}
 *: Ancient: {{t|grc|μάχομαι}}
 * Hebrew: {{t+|he|רָב|tr=rav}}, {{t+|he|נֶאֱבַק|tr=ne'evák}}, {{t+|he|נִלְחַם|tr=nilkhám}}
 * Hindi: {{t+|hi|लड़ना}}, {{t+|hi|झगड़ना}}
