--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -170,6 +170,7 @@ From {{der|ko|ltc|-}} {{ltc-l|早|id=1}}. {{hanja-hunmong|조〯|cwo|天文#상0
 * {{vi-l|早時|tảo thì}}
 * {{vi-l|早晚|tảo vãn}}
 * {{vi-l|太早|thái tảo}}
+* {{vi-l|早婚|tảo hôn}}
 {{der-bottom}}
 
 ===References===
