--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -292,7 +292,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 
 ===Etymology 2===
 {{root|en|ine-pro|*ǵews-}}
-From {{inh|en|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{m|enm|chosen||to choose}}. Cognate with {{cog|sco|chose||choosing, choice, selection}}.
+From {{inh|en|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, a Northern dialectal form of {{m+|enm|chois|t=choice}}. Cognate with {{cog|sco|chose}}, {{m|sco|choose}}, {{m|sco|chuse|t=choosing, choice, selection}}. {{doublet|en|choice}}, which see for more.
 
 ====Noun====
 {{en-noun}}
