--- a/en/昵/昵.16990.wikitext
+++ b/en/昵/昵.16990.wikitext
@@ -40,7 +40,7 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-alt-form|暱*}}
+# {{zh-alt-form|暱*|[[near]]; [[close]]; [[intimate]]}}
 #* {{zh-x|性 忠正，以 社 稷 為 己任，帝 器 而 昵 之，政事 多 諮 焉。|ref=Jinshu}}
 #* {{zh-x|寇 所 從 來 若 昵 道、傒 近，若 城 場，皆 為 扈 樓。|ref=Mozi}}
 
