--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -256,6 +256,9 @@ Borrowed from {{bor|hil|es|libre}}.
 
 ==Italian==
 
+===Pronunciation===
+{{it-pr|lìbre}}
+
 ===Noun===
 {{head|it|noun form|g=f}}
 
