/* Middle English */ <flesh#67311440>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -368,10 +368,11 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 ==Middle English==
 
 ===Alternative forms===
-* {{alter|enm|flech|fleesh|fleisch|fleische|fleish|flesch|flessh|flæsch|flesche|flæsce|fless}}
+* {{alter|enm|flech|fleesh|fleisch|fleische|fleish|flesch|flesche|fless|flessh}}
+* {{alter|enm|flæsc|flæsch|flæsh||early}}
 
 ===Etymology===
-From {{inh|enm|ang|flǣsċ}}, from {{inh|enm|gmw-pro|*flaiski}}, from {{inh|enm|gem-pro|*flaiski}}, from {{der|enm|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
+{{inh+|enm|ang|flǣsċ}}, from {{inh|enm|gmw-pro|*flaiski}}, from {{inh|enm|gem-pro|*flaiski}}, from {{der|enm|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
 
 ===Pronunciation===
 * {{IPA|enm|/flɛːʃ/|/flɛʃ/}}
