/* Derived terms */ <brick#67341575>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -53,6 +53,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 |Bricktown
 |brickwork
 |brickworks
+|phytobrick
 }}
 
 ====Related terms====
