t+tg:[[Германия]] ([[WT:EDIT|Assisted]]) <Germany#67352422>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -297,7 +297,7 @@ Presently, {{m|en|Germany}} usually refers to [[Federal Republic of Germany]];<r
 * Swahili: {{t+|sw|Ujerumani|c6}}
 * Swedish: {{t+|sv|Tyskland|n}}
 * Tagalog: {{t+|tl|Alemanya}}
-* Tajik: {{t+|tg|Олмон}}
+* Tajik: {{t+|tg|Олмон}}, {{t+|tg|Германия}}
 * Tamil: {{t|ta|ஜர்மனி}}
 * Tatar: {{t|tt|Алмания}}
 * Telugu: {{t+|te|జర్మనీ}}
