--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -37,7 +37,7 @@
 {{zh-pron
 |m=kūn
 |c=kwan1,gwan1
-|c_note=gwan1 - variant
+|c_note=gwan1 - literary; kwan1 - vernacular
 |g=kun1
 |h=pfs=khûn;gd=kun1
 |j=kung1
